--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres.jjqmjxumhnmeouasiynr:sainal@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres"
-# postgresql://postgres.jjqmjxumhnmeouasiynr:sainal@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
+# DATABASE_URL="postgresql://postgres:sainal@localhost:5432/event-management?schema=public"
+DATABASE_URL = "postgresql://postgres.jjqmjxumhnmeouasiynr:6agnarok@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres"
 NEXT_PUBLIC_SUPER_ADMIN=admin@mail.com
 PASSWORD_COOKIE_NAME = isAuthorized
 NEXT_PUBLIC_ADMIN_SESSION_CODE = lfhkdsglesrfhjdfghvlkjs
