refactor:migrated to neondb

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgresql://postgres:sainal@localhost:5432/event-management?schema=public"
-DATABASE_URL = "postgresql://postgres.jjqmjxumhnmeouasiynr:6agnarok@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres"
+DATABASE_URL = "postgresql://neondb_owner:8MhR9csazGqL@ep-dry-dust-a5vxio4v.us-east-2.aws.neon.tech/neondb?sslmode=require"
 NEXT_PUBLIC_SUPER_ADMIN=admin@mail.com
 PASSWORD_COOKIE_NAME = isAuthorized
 NEXT_PUBLIC_ADMIN_SESSION_CODE = lfhkdsglesrfhjdfghvlkjs
